// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render BlogHeader component w/ null link. 1`] = `
Array [
  <h2
    className="alegreya-sans f2 fw5 header-primary mt4"
    id="about"
  >
    <a
      className="sc-bdVaJa bXWskY"
      href="#about"
    >
      FooBar
    </a>
  </h2>,
  <p
    className="f6 flex items-center mv2"
  >
    <svg
      className="header-primary mr2"
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      style={
        Object {
          "maxWidth": "15px",
        }
      }
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="10"
        y2="10"
      />
    </svg>
    <span
      className="silver"
    >
      2018-01-01
    </span>
  </p>,
]
`;

exports[`Render BlogHeader component. 1`] = `
Array [
  <h2
    className="alegreya-sans f2 fw5 header-primary mt4"
    id="/2018-01-01"
  >
    <a
      className="sc-bdVaJa bXWskY"
      href="/true/2018-01-01"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      FooBar
    </a>
  </h2>,
  <p
    className="f6 flex items-center mv2"
  >
    <svg
      className="header-primary mr2"
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      style={
        Object {
          "maxWidth": "15px",
        }
      }
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="10"
        y2="10"
      />
    </svg>
    <span
      className="silver"
    >
      2018-01-01
    </span>
  </p>,
]
`;
